[package]
name = "kotlin"
version = "0.1.0"
authors = ["Philippe Gaultier <philigaultier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
termcolor = "1.1"
log = "0.4"
pretty_env_logger = "0.3"
heck = "0.3.1"
